# Deber_calculo_pi

./: CMakeLists.txt  main.cpp
